// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: ConfirmationModal should render correctly with basic props 1`] = `
<Modal>
  <Panel
    accent={true}
    sectioned={true}
  >
    <Button
      onClick={[Function]}
      primary={true}
      size="default"
    >
      Confirm
    </Button>
    <Button
      onClick={[Function]}
      size="default"
    >
      Cancel
    </Button>
  </Panel>
</Modal>
`;

exports[`Component: ConfirmationModal should render correctly with open, content, title and custom verb 1`] = `
<Modal
  open={true}
>
  <Panel
    accent={true}
    sectioned={true}
    title="Confirmation Modal Test Title"
  >
    <p>
      Some JSX content for the modal
    </p>
    <Button
      onClick={[Function]}
      primary={true}
      size="default"
    >
      DESTROY
    </Button>
    <Button
      onClick={[Function]}
      size="default"
    >
      Cancel
    </Button>
  </Panel>
</Modal>
`;
